--- a/app/Registro.html
+++ b/app/Registro.html
@@ -15,7 +15,7 @@
             <h2>
                 <div id="error"></div>
                 <form id="form" action="/" method="POST">
-                    <label for="nombre">
+                    <label>
                         Nombre
                     </label>
                     <input id="nombre" name="nombre" type="text" placeholder="Pablo">
