--- a/app/Registro.html
+++ b/app/Registro.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <script defer src="registro.js"></script>
+        <script defer src="scripts/Validador.js"></script>
+        <script defer src="scripts/registro.js"></script>
     </head>
     <title>
         Prueba de html antifurros
